--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -105,7 +105,7 @@ body.min-theme {
 body.green-theme {
     --background-color: #e1eee063;
     --card-background: #ffffff;
-    --border-color: #bdd8eb;
+    --border-color: #ccd7c2;
     --text-primary: #2c3e50;
     --text-secondary: #666666;
     --header-text: #2c3e50;
