--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -24,6 +24,8 @@
     /* search/groups */
     --top-background: white;
     --container-background: #fdf2f1;
+    --journal-background: #f5f5f5;
+    --reactions-background: #fdf2f1;
 
     /* typography */
     --font-primary:
@@ -55,6 +57,8 @@ body.dark-mode {
     /* search/groups */
     --top-background: #2d2d2d;
     --container-background: #2d1f1f;
+    --journal-background: #6a3a42;
+    --reactions-background: #47282e;
 
     /* forced fixes */
     input[type="text"]::placeholder {
@@ -93,6 +97,8 @@ body.blue-theme {
     /* search/groups */
     --top-background: white;
     --container-background: #e3f2f9;
+    --journal-background: #f5f5f5;
+    --reactions-background: #f5fcfe;
 
     --hover-color: rgba(77, 128, 180, 0.2);
 }
@@ -119,6 +125,8 @@ body.min-theme {
     /* search/groups */
     --top-background: white;
     --container-background: rgb(236, 236, 236);
+    --journal-background: #f5f5f5;
+    --reactions-background: #f5f5f5;
 
     --hover-color: rgba(242, 242, 242, 0.3);
 }
@@ -145,6 +153,8 @@ body.green-theme {
     /* search/groups */
     --top-background: white;
     --container-background: #e1eee063;
+    --journal-background: #f5f5f5;
+    --reactions-background: #e1eee063;
 }
 
 /* =========================================
